--- a/KLS_WEB/KLS_WEB/Views/Route/_AddEdit.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Route/_AddEdit.cshtml
@@ -318,7 +318,7 @@
                     });
                 }
             } else {
-                dToast("error", "Todos los campos son obligatorios.", "Error");
+                dToast("error", "LOS CAMPOS DEBEN SER MAYOR A 0", "Error");
             }
 
         });
