--- a/KLS_WEB/KLS_WEB/wwwroot/css/theme.css
+++ b/KLS_WEB/KLS_WEB/wwwroot/css/theme.css
@@ -216,10 +216,10 @@ form input {
     color: #ff0036;
 }
 
-input[type="checkbox"] {
+/*input[type="checkbox"] {
     position: relative;
     top: 5px;
-}
+}*/
 
 form .form-group {
     position: relative;
