--- a/KLS_WEB/KLS_WEB/Views/Carriers/Box/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Carriers/Box/Index.cshtml
@@ -11,7 +11,7 @@
             <a href="/Carriers/formCarriers/@id">
                 <div class="material-icons icon-red">arrow_back</div>
             </a>
-            <div class="text-uppercase poppins medium size-24 pl-2">TIPOS DE MERCANCIA</div>
+            <div class="text-uppercase poppins medium size-24 pl-2">TIPOS DE MERCANCíA</div>
         </div>
         <form id="frmRegister" action="#" method="post">
             <input type="hidden" value="0" id="idBox" name="Id" />
@@ -24,40 +24,40 @@
                 <div class="col-md-6">
                     <div class="p-4 shadow bg-white">
                         <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-md-6">
                                 <b>Tipos</b>
                             </div>
-                            <div class="col-md-8">
+                            <div class="col-md-6">
                                 <b>Comentarios adicionales</b>
                             </div>
                         </div>
 
                         <div class="form-group row">
-                            <div class="col-4">
-                                <input type="checkbox" value="true" id="Densidad" name="Densidad">
-                                <label for="Ctpat">
+                            <div class="col-6">
+                                <input type="checkbox" class="form-check-inline" value="true" id="Densidad" name="Densidad">
+                                <label for="Densidad">
                                     Densidad
                                 </label>
                             </div>
-                            <div class="col-sm-8">
+                            <div class="col-sm-6">
                                 <input type="text" class="form-control form-control-sm" id="D_Opcional" name="D_Opcional" placeholder="Opcionales">
                             </div>
                         </div>
 
                         <div class="form-group row">
-                            <div class="col-4">
+                            <div class="col-6">
                                 <input type="checkbox" value="true" id="TipoPresentacion" name="TipoPresentacion">
                                 <label for="Ctpat">
                                     Tipo presentación
                                 </label>
                             </div>
-                            <div class="col-sm-8">
+                            <div class="col-sm-6">
                                 <input type="text" class="form-control form-control-sm" id="Tp_Opcional" name="Tp_Opcional" placeholder="Opcionales">
                             </div>
                         </div>
 
                         <div class="form-group row">
-                            <div class="col-4">
+                            <div class="col-6">
                                 <input type="checkbox" value="true" id="Peligroso" name="Peligroso">
                                 <label for="Ctpat">
                                     Peligroso
@@ -65,18 +65,18 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <div class="col-4">
+                            <div class="col-6">
                                 <input type="checkbox" value="true" id="Material" name="Material">
                                 <label for="Ctpat">
                                     Material
                                 </label>
                             </div>
-                            <div class="col-sm-8">
+                            <div class="col-sm-6">
                                 <input type="text" class="form-control form-control-sm" id="M_Opcional" name="M_Opcional" placeholder="Opcionales">
                             </div>
                         </div>
                         <div class="form-group row">
-                            <div class="col-4">
+                            <div class="col-6">
                                 <input type="checkbox" value="true" id="Derramable" name="Derramable">
                                 <label for="Ctpat">
                                     Derramable
@@ -84,18 +84,18 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <div class="col-4">
+                            <div class="col-6">
                                 <input type="checkbox" value="true" id="Valor" name="Valor">
                                 <label for="Ctpat">
                                     Valor
                                 </label>
                             </div>
-                            <div class="col-sm-8">
+                            <div class="col-sm-6">
                                 <input type="text" class="form-control form-control-sm" id="V_Opcional" name="V_Opcional" placeholder="Opcionales">
                             </div>
                         </div>
                         <div class="form-group row">
-                            <div class="col-4">
+                            <div class="col-6">
                                 <input type="checkbox" value="true" id="Custodia" name="Custodia">
                                 <label for="Ctpat">
                                     Custodia
@@ -103,7 +103,7 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <div class="col-4">
+                            <div class="col-6">
                                 <input type="checkbox" value="true" id="OlorPenetrante" name="OlorPenetrante">
                                 <label for="Ctpat">
                                     Olor penetrante
@@ -180,7 +180,7 @@
                         $("#D_Opcional").val(res.d_Opcional);
                         $("#Id_Transportista").val(res.id_Transportista);
                         $("#M_Opcional").val(res.m_Opcional);
-                        $("#Notas").val(res.motas);
+                        $("#Notas").val(res.notas);
                         $("#Tp_Opcional").val(res.tp_Opcional);
                         $("#V_Opcional").val(res.v_Opcional);
                     } else {
