--- a/KLS_WEB/KLS_WEB/Views/Carriers/formCarriers.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Carriers/formCarriers.cshtml
@@ -266,6 +266,7 @@
     <script>
         function validateEmail(email) {
             var re = /^([A-ZÑ&]{3,4}) ?(?:- ?)?(\d{2}(?:0[1-9]|1[0-2])(?:0[1-9]|[12]\d|3[01])) ?(?:- ?)?([A-Z\d]{2})([A\d])$/;
+            email = email.toUpperCase();
             return re.test(email);
         }
 
